[metadata]
name = sapcc-swift-addons
summary = Swift Addons by SAP CC
description-file =
    README.md
license = Apache-2
author = SAP
author-email = stefan.majewsky@sap.com
home-page = https://github.com/sapcc/swift-addons
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.7

[files]
packages =
    sapcc_swift_addons

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
paste.filter_factory =
    sysmeta_domain_override = sapcc_swift_addons:DomainOverrideMiddleware.factory

[wheel]
universal = 1
