[metadata]
name = sapcc-swift-addons
summary = Swift Addons by SAP Converged Cloud
description-file =
    README.md
license = Apache-2
author = SAP
author-email = stefan.majewsky@sap.com
home-page = https://github.com/sapcc/swift-addons
python_requires = >=3.8
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    sapcc_swift_addons

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
paste.filter_factory =
    sysmeta_domain_override = sapcc_swift_addons.sysmeta_domain_override:filter_factory
    write_restriction = sapcc_swift_addons.write_restriction:filter_factory

[wheel]
universal = 1
